new proj/src/objects/Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>GE_Shipping_Clause_Comments__c</fullName>
        <label>Shipping Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Solicitation_Contract_Number__c</fullName>
        <label>Solicitation/Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Sourcing_Clause_Comments__c</fullName>
        <label>Sourcing Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Special_Mailing_Inst_CancelDoc__c</fullName>
        <label>Special Mailing Inst - Cancellation Doc</label>
        <picklist>
            <picklistValues>
                <fullName>Do not mail to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular mail to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL with tracking #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - do not mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Special_Mailing_Inst_New_Invoice__c</fullName>
        <label>Special Mailing Instructions New Invoice</label>
        <picklist>
            <picklistValues>
                <fullName>Do not mail to the customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular mail to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL with tracking #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - do not mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Team Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts Team Second Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestor Revisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Team Final Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Supply_Chain_Clause_Comments__c</fullName>
        <label>Supply Chain Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_This_will_be_handled_by__c</fullName>
        <inlineHelpText>Select the working engineer for this request</inlineHelpText>
        <label>This will be handled by</label>
        <picklist>
            <picklistValues>
                <fullName>-BN HW ITO/OTR TEAM -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamesen Motley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doug Eckery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Folkner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nathan Mayes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victor Nunez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CJ Uber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seth Hendrickson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-- TRS Team--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonya Woods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-- PACKAGED SYSTEMS --</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Gross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephen Sufka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--SOFTWARE --</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daryl Frogget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brad Kelly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Time_to_Complete__c</fullName>
        <description>Time to complete support request</description>
        <formula>(floor(( GE_Final_Approval_Time__c  -   GE_Original_Submission_Time__c )*24))
+
(((((GE_Final_Approval_Time__c -  GE_Original_Submission_Time__c)*24)-floor((GE_Final_Approval_Time__c -  GE_Original_Submission_Time__c)*24))*60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Complete (in minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_Total_Approvals__c</fullName>
        <label>Total Approvals</label>
        <summaryFilterItems>
            <field>Clause_Review__c.GE_Assessor_Determination__c</field>
            <operation>equals</operation>
            <value>Accept</value>
        </summaryFilterItems>
        <summaryForeignKey>Clause_Review__c.GE_Support_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_Total_Approve_w_Tailoring__c</fullName>
        <label>Total Approve w Tailoring</label>
        <summaryFilterItems>
            <field>Clause_Review__c.GE_Assessor_Determination__c</field>
            <operation>equals</operation>
            <value>Accept with Tailoring</value>
        </summaryFilterItems>
        <summaryForeignKey>Clause_Review__c.GE_Support_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_Total_Rejections__c</fullName>
        <label>Total Rejections</label>
        <summaryFilterItems>
            <field>Clause_Review__c.GE_Assessor_Determination__c</field>
            <operation>equals</operation>
            <value>Reject</value>
        </summaryFilterItems>
        <summaryForeignKey>Clause_Review__c.GE_Support_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_Total_Reviews_Completed__c</fullName>
        <label>Total Reviews Completed</label>
        <summaryFilterItems>
            <field>Clause_Review__c.GE_Assessor_Determination__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Clause_Review__c.GE_Support_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_Total_Reviews_Needed__c</fullName>
        <label>Total Reviews Needed</label>
        <summaryForeignKey>Clause_Review__c.GE_Support_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Who_Needs_to_Review__c</fullName>
        <label>Who Needs to Review?</label>
        <picklist>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Contracts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_invoice_amount_greater_than_50K__c</fullName>
        <formula>IF(GE_Original_Invoice_Amount__c &gt; 50000,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the invoice amount greater than $50K?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>GE_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Government_All_Open</fullName>
        <columns>NAME</columns>
        <columns>GE_Status__c</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Type_of_Request__c</columns>
        <columns>GE_Who_Needs_to_Review__c</columns>
        <columns>GE_Approval_Flag__c</columns>
        <columns>GE_Date_Received__c</columns>
        <columns>GE_Due_Date__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Government</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Government - All Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Government_Contracts_Initial_Review</fullName>
        <columns>NAME</columns>
        <columns>GE_Case_ID__c</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Type_of_Request__c</columns>
        <columns>GE_Date_Received__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <columns>GE_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Government</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>equals</operation>
            <value>Contracts Team Initial Review</value>
        </filters>
        <label>Government - Contracts Initial Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Government_Contracts_Team_Second_Revie</fullName>
        <columns>NAME</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Type_of_Request__c</columns>
        <columns>GE_Who_Needs_to_Review__c</columns>
        <columns>GE_Date_Received__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <columns>GE_Due_Date__c</columns>
        <columns>GE_Approval_Flag__c</columns>
        <columns>GE_Total_Reviews_Needed__c</columns>
        <columns>GE_Total_Approvals__c</columns>
        <columns>GE_Total_Approve_w_Tailoring__c</columns>
        <columns>GE_Total_Rejections__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Government</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>equals</operation>
            <value>Contracts Team Second Review</value>
        </filters>
        <label>Government - Contracts Team Second Revie</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Government_In_Department_Review</fullName>
        <columns>NAME</columns>
        <columns>GE_Company_Customer_Name__c</columns>
        <columns>GE_Type_of_Request__c</columns>
        <columns>GE_Who_Needs_to_Review__c</columns>
        <columns>GE_Approval_Flag__c</columns>
        <columns>GE_Date_Received__c</columns>
        <columns>GE_Due_Date__c</columns>
        <columns>GE_Due_Date_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Government</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>equals</operation>
            <value>Department Reviews</value>
        </filters>
        <label>Government - In Department Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Cancel_Rebill_Finance_Team</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>GE_Opportunity__c</columns>
        <columns>GE_Requestor__c</columns>
        <columns>GE_Status__c</columns>
        <columns>GE_Sales_Region__c</columns>
        <columns>GE_Product_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Cancel_Rebill_Request</value>
        </filters>
        <filters>
            <field>GE_My_Cancel_Rebill__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>My Open Cancel/Rebill (Finance Team)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Cancel_Rebill_Requestor</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>GE_Opportunity__c</columns>
        <columns>GE_Requestor__c</columns>
        <columns>GE_Finance_Team_Member__c</columns>
        <columns>GE_Status__c</columns>
        <columns>GE_Sales_Region__c</columns>
        <columns>GE_Product_Service__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Support_Request__c.Cancel_Rebill_Request</value>
        </filters>
        <filters>
            <field>GE_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>My Open Cancel/Rebill (Requestor)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>SR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <recordTypes>
        <fullName>Cancel_Rebill_Request</fullName>
        <active>true</active>
        <description>Support Central Request - Cancel/Rebill</description>
        <label>Cancel/Rebill Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engineering_Support</fullName>
        <active>true</active>
        <description>Support Central Request - Engineering</description>
        <label>Engineering Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>Support Central Request - Government</description>
        <label>Government</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_ARC_Number</fullName>
        <active>true</active>
        <description>Require ARC Number if invoice is tied to an ARC</description>
        <errorConditionFormula>AND ( ISPICKVAL (   GE_Invoice_Tied_to_an_ARC__c , &quot;Yes&quot;) , ISBLANK (  GE_ARC_Number__c ))</errorConditionFormula>
        <errorDisplayField>GE_ARC_Number__c</errorDisplayField>
        <errorMessage>You must enter an ARC Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Cancellation_Instructions</fullName>
        <active>true</active>
        <description>Require cancellation mailing instructions if cancellation notice to customer is required</description>
        <errorConditionFormula>AND ( ISPICKVAL ( GE_Mail_Cancell_Doc_to_Customer__c , &quot;Yes&quot;) , ISPICKVAL (  GE_Special_Mailing_Inst_CancelDoc__c  , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>GE_Special_Mailing_Inst_CancelDoc__c</errorDisplayField>
        <errorMessage>Cancellation Mailing Instructions is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Method_of_Payment</fullName>
        <active>true</active>
        <description>Require Method of Payment if invoice has been paid</description>
        <errorConditionFormula>AND ( ISPICKVAL (GE_CBR_Invoice_Paid__c , &quot;Yes&quot;) , ISPICKVAL ( GE_Method_of_Payment__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>GE_Method_of_Payment__c</errorDisplayField>
        <errorMessage>Method of Payment is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_New_Invoice_Instructions</fullName>
        <active>true</active>
        <description>Require new invoice mailing instructions if new invoice to customer is required</description>
        <errorConditionFormula>AND ( ISPICKVAL (  GE_Mail_New_Invoice_to_Customer__c  , &quot;Yes&quot;) , ISPICKVAL (   GE_Special_Mailing_Inst_New_Invoice__c   , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>GE_Special_Mailing_Inst_New_Invoice__c</errorDisplayField>
        <errorMessage>New Invoice Mailing Instructions is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_For_Others</fullName>
        <active>true</active>
        <description>Require reason for other if there are other cancel rebills</description>
        <errorConditionFormula>AND ( ISPICKVAL (  GE_Other_CancelRebil_onthis_SalesOr__c  , &quot;Yes&quot;) , ISBLANK ( GE_Resason_for_Others__c  ))</errorConditionFormula>
        <errorDisplayField>GE_Resason_for_Others__c</errorDisplayField>
        <errorMessage>You must enter a reason for the other cancel/rebills</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Who_Created_Sales_Order</fullName>
        <active>true</active>
        <description>Require who created the sales order if the sales order was not created by requestor</description>
        <errorConditionFormula>AND ( ISPICKVAL ( GE_CBRDid_you_create_the_sales_order__c  , &quot;No&quot;) , ISBLANK ( GE_CBR_who_created_the_sales_order__r.LastName ))</errorConditionFormula>
        <errorDisplayField>GE_CBR_who_created_the_sales_order__c</errorDisplayField>
        <errorMessage>You must select who created the sales order</errorMessage>
    </validationRules>
</CustomObject>